--- a/NAM/AndroidManifest.xml
+++ b/NAM/AndroidManifest.xml
@@ -4,6 +4,12 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
+    <permission
+    	android:name="com.appsrox.instachat.permission.C2D_MESSAGE"
+    	android:protectionLevel="signature" />
+    <uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
@@ -16,15 +22,16 @@
         <activity
             android:name="com.sw.nam.MainActivity"
             android:label="@string/app_name" >
+
+        </activity>
+        <activity
+            android:name="com.sw.nam.MainMenu"
+            android:label="@string/title_activity_main_menu" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name="com.sw.nam.MainMenu"
-            android:label="@string/title_activity_main_menu" >
         </activity>
     </application>
 
