fixed settings menu, notification vibration functionality implemented

--- a/NAM/AndroidManifest.xml
+++ b/NAM/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <uses-sdk
         android:minSdkVersion="9"
-        android:targetSdkVersion="18" />
+        android:targetSdkVersion="19" />
 
     <permission
         android:name="com.sw.nam.permission.C2D_MESSAGE"
@@ -18,7 +18,8 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-
+    <uses-permission android:name="android.permission.VIBRATE"/>
+    
     <application
         android:name="com.sw.nam.Common"
         android:allowBackup="true"
