--- a/NAM/AndroidManifest.xml
+++ b/NAM/AndroidManifest.xml
@@ -37,7 +37,8 @@
             />
         <activity
             android:name="com.sw.nam.SettingsActivity"
-            android:label="@string/title_activity_settings" 
+            android:label="@string/title_activity_settings"
+            android:parentActivityName="com.sw.nam.MainActivity"
             />
 
         <receiver
