--- a/NAM/.project
+++ b/NAM/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>NAMv2</name>
+	<name>NAM</name>
 	<comment></comment>
 	<projects>
 	</projects>
