--- a/NAM_tests/AndroidManifest.xml
+++ b/NAM_tests/AndroidManifest.xml
@@ -4,12 +4,14 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="9" />
+    <uses-sdk
+        android:minSdkVersion="14"/>
 
     <instrumentation
         android:name="android.test.InstrumentationTestRunner"
         android:targetPackage="com.sw.nam" />
 
+  
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
